--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
+    "@mui/material": "^7.3.7",
     "chalk": "^5.3.0",
     "fs-extra": "^11.2.0"
   },
